# fastapi-example

./: .gitignore  README.rst  pyproject.toml  thunder-collection_col-sanjeev.json  thunder-environment_env-sanjeev.json  thunder-report_col-sanjeev.json
app/: auth.py  main.py  models.py  schemas.py  settings.py
app/routers/: login.py  me.py  posts.py  users.py
